<resources>
    <string name="app_name">StudyApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>
    <string name="loginHere">Login Here</string>
    <string name="name">Name</string>
    <string name="chooise_class">Class</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Username">Username</string>
</resources>
