<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="StudyApp"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/class_spinner" />
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="250dp"
        android:layout_height="30dp"

        android:id="@+id/class_spinner"
        android:layout_marginTop="40dp"
        android:entries="@array/ClassMCA"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooise_class"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already a Member or Want Google Sign in"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="72dp" />

    <TextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/loginHere"
        android:textColor="@color/white"
        android:focusable="true"
        android:clickable="true"
        android:textSize="15sp"
        android:layout_marginRight="28dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="256dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />
</android.support.constraint.ConstraintLayout>