<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textViewL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="StudyApp"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewL">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="120dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignIn"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"/>
</android.support.constraint.ConstraintLayout>